fix: consertado registro de usuário

--- a/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Animal/Index.cshtml
+++ b/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Animal/Index.cshtml
@@ -107,7 +107,7 @@ else if (TempData["SuccessMessage"] != null)
                                             <div>
                                                 <h5 class="card-title">@animal.Id - @animal.Name</h5>
                                                 <p class="card-text">
-                                                    <strong>Dono:</strong> @animal.Owner.Name
+                                                    <strong>Dono:</strong> @animal.Owner?.Name
                                                 </p>
                                                 <p class="card-text">
                                                     <strong>CPF do dono:</strong> @animal.Owner.Document
@@ -192,7 +192,7 @@ else if (TempData["SuccessMessage"] != null)
                                             <div>
                                                 <h5 class="card-title">@animal.Id - @animal.Name</h5>
                                                 <p class="card-text">
-                                                    <strong>Dono:</strong> @animal.Owner.Name
+                                                    <strong>Dono:</strong> @animal.Owner?.Name
                                                 </p>
                                                 <p class="card-text">
                                                     <strong>CPF do dono:</strong> @animal.Owner.Document
