--- a/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Auth/Register.cshtml
+++ b/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Auth/Register.cshtml
@@ -63,11 +63,11 @@ else if (TempData["SuccessMessage"] != null)
         <span asp-validation-for="Gender" class="text-danger"></span>
     </div>
 
-    <div class="col-md-10">
-        <label asp-for="UserName" class="form-label">Nome de Usuário <span style="color: red;">*</span></label>
-        <input asp-for="UserName" type="text" class="form-control shadow-none" placeholder="Nome de Usuário">
-        <span asp-validation-for="UserName" class="text-danger"></span>
-    </div>
+    @* <div class="col-md-10"> *@
+    @*     <label asp-for="UserName" class="form-label">Nome de Usuário <span style="color: red;">*</span></label> *@
+    @*     <input asp-for="UserName" type="text" class="form-control shadow-none" placeholder="Nome de Usuário"> *@
+    @*     <span asp-validation-for="UserName" class="text-danger"></span> *@
+    @* </div> *@
 
     <div class="col-md-7">
         <label asp-for="Document" class="form-label">CPF <span style="color: red;">*</span></label>
