--- a/PetworldOficial.Presentation/PetworldOficial.MVC/Views/User/Update.cshtml
+++ b/PetworldOficial.Presentation/PetworldOficial.MVC/Views/User/Update.cshtml
@@ -24,7 +24,7 @@
         </label>
     </div>
     <input type="hidden" asp-for="@Model.Id">
-    <input type="hidden" asp-for="@Model.UserName">
+    @* <input type="hidden" asp-for="@Model.UserName"> *@
     <input type="hidden" asp-for="@Model.Gender">
 
     <div class="col-md-10">
