--- a/PetworldOficial.Presentation/PetworldOficial.MVC/Views/User/Delete.cshtml
+++ b/PetworldOficial.Presentation/PetworldOficial.MVC/Views/User/Delete.cshtml
@@ -31,9 +31,9 @@
     </div>
 
     <div class="col-md-10">
-        <label asp-for="UserName" class="form-label">Nome de Usuário</label>
-        <input asp-for="UserName" type="text" class="form-control shadow-none" placeholder="Nome" readonly>
-        <span asp-validation-for="UserName" class="text-danger"></span>
+        <label asp-for="Name" class="form-label">Dono</label>
+        <input asp-for="Name" type="text" class="form-control shadow-none" placeholder="Nome" readonly>
+        <span asp-validation-for="Name" class="text-danger"></span>
     </div>
 
     <div class="col-md-10">
