--- a/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Product/Delete.cshtml
+++ b/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Product/Delete.cshtml
@@ -18,6 +18,7 @@
 <div class="d-flex justify-content-center align-items-center">
     <img style="width: min-content; height: 250px; object-fit: cover; border-radius: 5px" src="\Images/@Model.ImageUrl" alt="Imagem do Produto">
 </div>
+<br>
 
 <div class="container">
     <br>
@@ -48,7 +49,7 @@
 
         <div class="col-md-8">
             <label asp-for="@Model.Price" class="form-label">Preço</label>
-            <input asp-for="@Model.Price" type="text" class="form-control shadow-none" placeholder="Digite o preço" readonly>
+            <input asp-for="@Model.Price" type="number" class="form-control shadow-none" placeholder="Digite o preço" readonly>
             <span asp-validation-for="@Model.Price" class="text-danger"></span>
         </div>
 
