--- a/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Product/Create.cshtml
+++ b/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Product/Create.cshtml
@@ -31,13 +31,13 @@
 
         <div class="col-md-8">
             <label asp-for="@Model.Price" class="form-label">Preço <span style="color: red;">*</span></label>
-            <input asp-for="@Model.Price" type="text" class="form-control shadow-none" placeholder="Preço">
+            <input asp-for="@Model.Price" type="number" min="0" step="0.1" class="form-control shadow-none" placeholder="Preço">
             <span asp-validation-for="Price" class="text-danger"></span>
         </div>
 
         <div class="col-md-8">
             <label asp-for="@Model.Quantity" class="form-label">Quantidade <span style="color: red;">*</span></label>
-            <input asp-for="@Model.Quantity" type="text" class="form-control shadow-none" placeholder="Digite a quantidade">
+            <input asp-for="@Model.Quantity" type="number" min="1" class="form-control shadow-none" placeholder="Digite a quantidade">
             <span asp-validation-for="Quantity" class="text-danger"></span>
         </div>
 
