--- a/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Product/Update.cshtml
+++ b/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Product/Update.cshtml
@@ -1,4 +1,5 @@
-﻿@using Microsoft.AspNetCore.Mvc.TagHelpers
+﻿@using System.Globalization
+@using Microsoft.AspNetCore.Mvc.TagHelpers
 @model PetWorldOficial.Application.Commands.Product.UpdateProductCommand
 
 @{
@@ -20,6 +21,7 @@
         <img style="width: min-content; height: 250px; object-fit: cover; border-radius: 5px" src="\Images/@Model.ImageUrl" alt="Imagem do Produto">
     }
 </div>
+<br>
 
 <div class="container">
     <form class="row g-3 d-flex justify-content-center align-items-center" enctype="multipart/form-data" asp-controller="Product" asp-action="Update" method="post">
@@ -45,13 +47,17 @@
 
         <div class="col-md-8">
             <label asp-for="@Model.Price" class="form-label">Preço <span style="color: red;">*</span></label>
-            <input asp-for="@Model.Price" type="text" class="form-control shadow-none" value="@Model.Price">
+            <input asp-for="@Model.Price"
+                   type="number"
+                   class="form-control shadow-none"
+                   value="@(Model.Price.HasValue ? Model.Price.Value.ToString("0.00", CultureInfo.InvariantCulture) : "")"
+                   step="0.01"/>
             <span asp-validation-for="Price" class="text-danger"></span>
         </div>
 
         <div class="col-md-8">
             <label asp-for="@Model.QuantityInStock" class="form-label">Quantidade <span style="color: red;">*</span></label>
-            <input asp-for="@Model.QuantityInStock" type="text" class="form-control shadow-none" value="@Model.QuantityInStock">
+            <input asp-for="@Model.QuantityInStock" type="number" min="0" class="form-control shadow-none" value="@Model.QuantityInStock">
             <span asp-validation-for="QuantityInStock" class="text-danger"></span>
         </div>
 
