--- a/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Schedule/Index.cshtml
+++ b/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Schedule/Index.cshtml
@@ -12,7 +12,7 @@
 {
     <div class="container-fluid py-3">
         <br>
-        <h1 class="text-center">Agendamentos</h1>
+        <h1 class="text-center">Lista de Agendamentos</h1>
         <br>
     </div>
 }
@@ -65,16 +65,23 @@ else if (TempData["SuccessMessage"] != null)
                     @*         <img style="width: 25px" src="/Images/addition.svg" alt=""> Novo Agendamento *@
                     @*     </a> *@
                     @* </div> *@
+
+
                     <div class="col-md-12 d-flex justify-content-end">
-                        <input type="text" class="form-control" id="searchInput"
-                               placeholder="Pesquisar por nome de animal, serviço ou funcionário..." onkeyup="searchScheduling()">
+                        <div class="input-group">
+                            <input type="text" id="searchInput" class="form-control" placeholder="Pesquisar serviços..."
+                                   aria-label="Pesquisar serviços" aria-describedby="search-addon" oninput="searchScheduling()">
+                            <span class="input-group-text" id="search-addon">
+                                <i class="fas fa-search"></i>
+                            </span>
+                        </div>
                     </div>
                 </div>
             </div>
             <div class="container">
                 <div class="row" id="scheduleContainer">
                     <!-- Coluna de agendamentos -->
-                    <div class="col-lg-8">
+                    <div class="col-lg-12">
                         <!-- Exibição dos agendamentos em cards -->
                         @foreach (var schedule in Model)
                         {
@@ -128,25 +135,6 @@ else if (TempData["SuccessMessage"] != null)
                             </div>
                         }
                     </div>
-
-                    <!-- Coluna de resumo do agendamento -->
-                    <div class="col-lg-4">
-                        <div class="card bg-light">
-                            <div class="card-body">
-                                <h4 class="card-title">Resumo dos Agendamentos</h4>
-                                <ul class="list-group list-group-flush mb-3">
-                                    <li class="list-group-item d-flex justify-content-between">
-                                        <span>Total de Agendamentos</span>
-                                        <strong>@Model.Count()</strong>
-                                    </li>
-                                </ul>
-                                <a asp-action="Index" asp-controller="Service" class="btn btn-success btn-block">
-                                    Agendar Novo
-                                    Serviço
-                                </a>
-                            </div>
-                        </div>
-                    </div>
                 </div>
             </div>
         </section>
@@ -156,16 +144,20 @@ else if (TempData["SuccessMessage"] != null)
         <section class="my-5">
             <!-- Filtro de Pesquisa -->
             <div class="container">
-                <div class="row mb-3">
-                    <div class="col-md-12 d-flex justify-content-end">
-                        <input type="text" class="form-control" id="searchInput"
-                               placeholder="Pesquisar por nome de animal, serviço ou funcionário..." onkeyup="searchScheduling()">
+                <div class="col-md-12 d-flex justify-content-end">
+                    <div class="input-group">
+                        <input type="text" id="searchInput" class="form-control" placeholder="Pesquisar agendamentos..."
+                               aria-label="Pesquisar agendamentos" aria-describedby="search-addon" oninput="searchScheduling()">
+                        <span class="input-group-text" id="search-addon">
+                            <i class="fas fa-search"></i>
+                        </span>
                     </div>
                 </div>
             </div>
+            <br>
             <div class="container">
                 <div class="row" id="scheduleContainer">
-                    <div class="col-lg-8">
+                    <div class="col-lg-12">
 
                         @foreach (var schedule in Model)
                         {
@@ -230,24 +222,24 @@ else if (TempData["SuccessMessage"] != null)
                             </div>
                         }
                     </div>
-                    <!-- Coluna de resumo do agendamento -->
-                    <div class="col-lg-4">
-                        <div class="card bg-light">
-                            <div class="card-body">
-                                <h4 class="card-title">Resumo dos Agendamentos</h4>
-                                <ul class="list-group list-group-flush mb-3">
-                                    <li class="list-group-item d-flex justify-content-between">
-                                        <span>Total de Agendamentos</span>
-                                        <strong>@Model.Count()</strong>
-                                    </li>
-                                </ul>
-                                <a asp-action="Index" asp-controller="Service" class="btn btn-success btn-block">
-                                    Agendar Novo
-                                    Serviço
-                                </a>
-                            </div>
-                        </div>
-                    </div>
+                    @* <!-- Coluna de resumo do agendamento --> *@
+                    @* <div class="col-lg-4"> *@
+                    @*     <div class="card bg-light"> *@
+                    @*         <div class="card-body"> *@
+                    @*             <h4 class="card-title">Resumo dos Agendamentos</h4> *@
+                    @*             <ul class="list-group list-group-flush mb-3"> *@
+                    @*                 <li class="list-group-item d-flex justify-content-between"> *@
+                    @*                     <span>Total de Agendamentos</span> *@
+                    @*                     <strong>@Model.Count()</strong> *@
+                    @*                 </li> *@
+                    @*             </ul> *@
+                    @*             <a asp-action="Index" asp-controller="Service" class="btn btn-success btn-block"> *@
+                    @*                 Agendar Novo *@
+                    @*                 Serviço *@
+                    @*             </a> *@
+                    @*         </div> *@
+                    @*     </div> *@
+                    @* </div> *@
                 </div>
             </div>
         </section>
