--- a/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Schedule/Update.cshtml
+++ b/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Schedule/Update.cshtml
@@ -122,7 +122,7 @@ else if (TempData["SuccessMessage"] != null)
 
         <div class="col-md-8">
             <label asp-for="@Model.Observation" class="form-label">Observação</label>
-            <textarea asp-for="@Model.Observation" class="form-control shadow-none" placeholder="Escreva uma observação" style="height: 100px" readonly></textarea>
+            <textarea asp-for="@Model.Observation" class="form-control shadow-none" placeholder="Escreva uma observação" style="height: 100px"></textarea>
             <span asp-validation-for="@Model.Observation" class="text-danger"></span>
         </div>
 
