--- a/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Service/Create.cshtml
+++ b/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Service/Create.cshtml
@@ -43,13 +43,13 @@ else if (TempData["SuccessMessage"] != null)
 
         <div class="col-md-8">
             <label asp-for="@Model.Price" class="form-label">Preço <span style="color: red;">*</span></label>
-            <input asp-for="@Model.Price" type="text" class="form-control shadow-none" placeholder="Digite o preço">
+            <input asp-for="@Model.Price" type="number" min="0" step="0.1" class="form-control shadow-none" placeholder="Digite o preço">
             <span asp-validation-for="@Model.Price" class="text-danger"></span>
         </div>
 
         <div class="col-md-8">
             <label asp-for="@Model.DurationInMinutes" class="form-label">Duração em minutos <span style="color: red;">*</span></label>
-            <input asp-for="@Model.DurationInMinutes" type="text" class="form-control shadow-none" placeholder="Digite a duração em minutos">
+            <input asp-for="@Model.DurationInMinutes" type="number" min="0" class="form-control shadow-none" placeholder="Digite a duração em minutos">
             <span asp-validation-for="@Model.DurationInMinutes" class="text-danger"></span>
         </div>
 
