--- a/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Service/Delete.cshtml
+++ b/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Service/Delete.cshtml
@@ -16,7 +16,7 @@
 </div>
 
 <div class="d-flex justify-content-center align-items-center">
-    <img style="width: 350px;" src="\Images/@Model.ImageUrl" alt="Imagem do Produto">
+    <img style="width: min-content; height: 250px; object-fit: cover; border-radius: 5px" src="\Images/@Model.ImageUrl" alt="Imagem do Produto">
 </div>
 
 <div class="container">
