--- a/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Service/Update.cshtml
+++ b/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Service/Update.cshtml
@@ -16,7 +16,7 @@
 </div>
 
 <div class="d-flex justify-content-center align-items-center">
-    <img style="width: 350px;" src="\Images/@Model.ImageUrl" alt="Imagem do Produto">
+    <img style="width: min-content; height: 250px; object-fit: cover; border-radius: 5px" src="\Images/@Model.ImageUrl" alt="Imagem do Produto">
 </div>
 
 <div class="container">
@@ -34,13 +34,13 @@
         </div>
         <div class="col-md-8">
             <label asp-for="@Model.Price" class="form-label">Preço<span style="color: red;">*</span></label>
-            <input asp-for="@Model.Price" type="text" class="form-control shadow-none" placeholder="Digite o preço">
+            <input asp-for="@Model.Price" type="number" min="0" step="0.1" class="form-control shadow-none" placeholder="Digite o preço">
             <span asp-validation-for="@Model.Price" class="text-danger"></span>
         </div>
 
         <div class="col-md-8">
             <label asp-for="@Model.DurationInMinutes" class="form-label">Duração em minutos <span style="color: red;">*</span></label>
-            <input asp-for="@Model.DurationInMinutes" type="text" class="form-control shadow-none" placeholder="Digite o preço">
+            <input asp-for="@Model.DurationInMinutes" type="number" min="0" class="form-control shadow-none" placeholder="Digite o preço">
             <span asp-validation-for="@Model.DurationInMinutes" class="text-danger"></span>
         </div>
 
