--- a/PetworldOficial.Presentation/PetworldOficial.MVC/Views/User/Delete.cshtml
+++ b/PetworldOficial.Presentation/PetworldOficial.MVC/Views/User/Delete.cshtml
@@ -6,11 +6,11 @@
     Layout = "_Layout";
 }
 
-<div class="container-fluid text-black py-3">
+<div class="container-fluid py-3">
     <br>
-    <h2 class="display-6 text-center fw">
-        <img src="/Images/DadosDoUsuario.png" alt="">
-    </h2>
+    <h1 class="text-center">
+        Dados do Usuário
+    </h1>
     <br>
 </div>
 
