--- a/PetworldOficial.Presentation/PetworldOficial.MVC/Views/User/Index.cshtml
+++ b/PetworldOficial.Presentation/PetworldOficial.MVC/Views/User/Index.cshtml
@@ -4,105 +4,111 @@
 @model IEnumerable<PetWorldOficial.Application.ViewModels.User.UserDetailsViewModel>
 
 @{
-ViewData["Title"] = "Usuários";
-Layout = "_Layout";
+    ViewData["Title"] = "Usuários";
+    Layout = "_Layout";
 }
 
 @if (Model is not null && Model.Any())
 {
-<div class="container-fluid py-3">
-    <br>
-    <h1 class="text-center">
-        Lista de Usuários
-    </h1>
-    <br>
-</div>
+    <div class="container-fluid py-3">
+        <br>
+        <h1 class="text-center">
+            Lista de Usuários
+        </h1>
+        <br>
+    </div>
 
-@if (TempData["ErrorMessage"] != null)
-{
-<div class="alert alert-danger" role="alert">
-    @TempData["ErrorMessage"]
-    <button style="position: absolute; top: 0.7rem; right: 0; padding: 0.5rem 1rem;" type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-</div>
-}
-else if (TempData["SuccessMessage"] != null)
-{
-<div class="alert alert-success" role="alert">
-    @TempData["SuccessMessage"]
-    <button style="position: absolute; top: 0.7rem; right: 0; padding: 0.5rem 1rem;" type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-</div>
-}
-
-<section class="my-5">
-    <div class="container">
-        <!-- Linha contendo o botão e a barra de pesquisa -->
-        <div class="row mb-3">
-            <div class="col-md-6 d-flex justify-content-start">
-                <a class="btn btn-dark fw-normal shadow-none" asp-controller="Auth" asp-action="Register">
-                    <img style="width: 25px" src="/Images/addition.svg" alt="">Novo Usuário
-                </a>
-            </div>
-            <div class="col-md-6 d-flex justify-content-end">
-                <input type="text" class="form-control" id="searchInput" placeholder="Pesquisar usuário..." onkeyup="searchUser()">
-            </div>
+    @if (TempData["ErrorMessage"] != null)
+    {
+        <div class="alert alert-danger" role="alert">
+            @TempData["ErrorMessage"]
+            <button style="position: absolute; top: 0.7rem; right: 0; padding: 0.5rem 1rem;" type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
         </div>
+    }
+    else if (TempData["SuccessMessage"] != null)
+    {
+        <div class="alert alert-success" role="alert">
+            @TempData["SuccessMessage"]
+            <button style="position: absolute; top: 0.7rem; right: 0; padding: 0.5rem 1rem;" type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+        </div>
+    }
 
-        <div class="row" id="userList">
-            <div class="col-lg-12">
-                @foreach (var user in Model)
-                {
-                <div class="card cart-card mb-3 user-card">
-                    <div class="card-body d-flex justify-content-between align-items-center">
-                        <div class="d-flex">
-                            <img
-                                src="/Images/UserPhoto.jpg"
-                                alt="Imagem pet"
-                                class="img-fluid me-4"
-                                style="width: 100px; object-fit: cover"/>
-                            <div>
-                                <h5 class="card-title">@user.Id - @user.Name</h5>
-                                <p class="card-text">
-                                    <strong>Genêro:</strong> @(Enum.Parse<EGender>(user.Gender).GetDisplayName())
-                                </p>
-                                <p class="card-text">
-                                    <strong>CPF:</strong> @user.Document
-                                </p>
-                                <p class="card-text">
-                                    <strong>Email:</strong> @user.Email
-                                </p>
-                                <p class="card-text">
-                                    <strong>Perfil:</strong> @user.RoleName
-                                </p>
-                            </div>
-                        </div>
-                        <div class="d-flex flex-column">
-                            <a href="@Url.Action("Update", "User", new { id = user.Id })"
-                               class="btn btn-warning mb-2 d-flex align-items-center justify-content-center" style="border-radius: 10px;">
-                                <i class="fas fa-edit me-2"></i> Editar
-                            </a>
-                            <a href="@Url.Action("Delete", "User", new { id = user.Id })"
-                               class="btn btn-danger d-flex align-items-center justify-content-center" style="border-radius: 10px;">
-                                <i class="fas fa-trash me-2"></i> Deletar
-                            </a>
-                        </div>
+    <section class="my-5">
+        <div class="container">
+            <!-- Linha contendo o botão e a barra de pesquisa -->
+            <div class="row mb-3">
+                <div class="col-md-6 d-flex justify-content-start">
+                    <a class="btn btn-dark fw-normal shadow-none" asp-controller="Auth" asp-action="Register">
+                        <img style="width: 25px" src="/Images/addition.svg" alt="">Novo Usuário
+                    </a>
+                </div>
+                <div class="col-md-6 d-flex justify-content-end">
+                    <div class="input-group">
+                        <input type="text" id="searchInput" class="form-control" placeholder="Pesquisar serviços..."
+                               aria-label="Pesquisar serviços" aria-describedby="search-addon" oninput="searchUser()">
+                        <span class="input-group-text" id="search-addon">
+                            <i class="fas fa-search"></i>
+                        </span>
                     </div>
                 </div>
-                }
+            </div>
+
+            <div class="row" id="userList">
+                <div class="col-lg-12">
+                    @foreach (var user in Model)
+                    {
+                        <div class="card cart-card mb-3 user-card">
+                            <div class="card-body d-flex justify-content-between align-items-center">
+                                <div class="d-flex">
+                                    <img
+                                        src="/Images/UserPhoto.jpg"
+                                        alt="Imagem pet"
+                                        class="img-fluid me-4"
+                                        style="width: 100px; object-fit: cover"/>
+                                    <div>
+                                        <h5 class="card-title">@user.Id - @user.Name</h5>
+                                        <p class="card-text">
+                                            <strong>Genêro:</strong> @(Enum.Parse<EGender>(user.Gender).GetDisplayName())
+                                        </p>
+                                        <p class="card-text">
+                                            <strong>CPF:</strong> @user.Document
+                                        </p>
+                                        <p class="card-text">
+                                            <strong>Email:</strong> @user.Email
+                                        </p>
+                                        <p class="card-text">
+                                            <strong>Perfil:</strong> @user.RoleName
+                                        </p>
+                                    </div>
+                                </div>
+                                <div class="d-flex flex-column">
+                                    <a href="@Url.Action("Update", "User", new { id = user.Id })"
+                                       class="btn btn-warning mb-2 d-flex align-items-center justify-content-center" style="border-radius: 10px;">
+                                        <i class="fas fa-edit me-2"></i> Editar
+                                    </a>
+                                    <a href="@Url.Action("Delete", "User", new { id = user.Id })"
+                                       class="btn btn-danger d-flex align-items-center justify-content-center" style="border-radius: 10px;">
+                                        <i class="fas fa-trash me-2"></i> Deletar
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    }
+                </div>
             </div>
         </div>
-    </div>
-</section>
+    </section>
 }
 else
 {
-<div class="container-fluid text-black py-3">
-    <br>
-    <h2 class="display-6 text-center fw">@TempData["UserNotFoundMessage"]</h2>
-</div>
+    <div class="container-fluid text-black py-3">
+        <br>
+        <h2 class="display-6 text-center fw">@TempData["UserNotFoundMessage"]</h2>
+    </div>
 }
 
 @section Scripts {
-<script>
+    <script>
     function searchUser() {
         var input = document.getElementById("searchInput");
         var filter = input.value.toUpperCase();
