--- a/PetworldOficial.Presentation/PetworldOficial.MVC/Views/User/MyAccount.cshtml
+++ b/PetworldOficial.Presentation/PetworldOficial.MVC/Views/User/MyAccount.cshtml
@@ -1,11 +1,27 @@
 ﻿@using Microsoft.AspNetCore.Mvc.TagHelpers
 @using PetWorldOficial.Domain.Enums
 @using PetworldOficial.MVC.Utils
-@model PetWorldOficial.Application.Commands.User.RegisterUserCommand
+@model PetWorldOficial.Application.Commands.User.MyAccountCommand
 
 @{
-ViewData["Title"] = "Minha Conta";
-Layout = "_Layout";
+    ViewData["Title"] = "Minha Conta";
+    Layout = "_Layout";
+}
+
+@if (TempData["ErrorMessage"] != null)
+{
+    <div class="alert alert-danger alert-dismissible fade show" role="alert">
+        @TempData["ErrorMessage"]
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    </div>
+}
+
+@if (TempData["SuccessMessage"] != null)
+{
+    <div class="alert alert-success alert-dismissible fade show" role="alert">
+        @TempData["SuccessMessage"]
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    </div>
 }
 
 <div class="container my-5">
@@ -32,101 +48,137 @@ Layout = "_Layout";
                 </li>
             </ul>
 
-            <!-- Tabs Content -->
-            <div class="tab-content mt-4" id="accountTabsContent">
-                <!-- Personal Information Tab -->
-                <div class="tab-pane fade show active" id="personal" role="tabpanel" aria-labelledby="personal-tab">
-                    <form class="row g-3">
-                        <div class="col-md-6">
-                            <label asp-for="Name" class="form-label">Nome</label>
-                            <input asp-for="Name" type="text" class="form-control">
+            <!-- Unified Form -->
+            <form class="mt-4 row g-3" asp-controller="User" asp-action="MyAccount" method="post">
+                <div asp-validation-summary="All" class="text-danger"></div>
+
+                <input asp-for="Id" type="hidden" class="form-control">
+                <input asp-for="PasswordHash" type="hidden" class="form-control">
+
+                <div class="tab-content" id="accountTabsContent">
+                    <!-- Personal Information Tab -->
+                    <div class="tab-pane fade show active" id="personal" role="tabpanel" aria-labelledby="personal-tab">
+                        <div class="row g-3">
+                            <div class="col-md-6">
+                                <label asp-for="Name" class="form-label">Nome</label>
+                                <input asp-for="Name" type="text" class="form-control">
+                            </div>
+                            <div class="col-md-6">
+                                <label asp-for="Email" class="form-label">E-mail</label>
+                                <input asp-for="Email" type="email" class="form-control">
+                            </div>
+                            <div class="col-md-6">
+                                <label asp-for="Document" class="form-label">CPF</label>
+                                <input asp-for="Document" type="text" class="form-control">
+                            </div>
+                            <div class="col-md-6">
+                                <label asp-for="PhoneNumber" class="form-label">Telefone</label>
+                                <input asp-for="PhoneNumber" type="tel" class="form-control">
+                            </div>
+                            <div class="col-md-6">
+                                <label asp-for="@Model.Gender" class="form-label">Gênero</label>
+                                <select asp-for="@Model.Gender" class="form-select">
+                                    <option value="" disabled>Selecione</option>
+                                    @foreach (EGender gender in Enum.GetValues(typeof(EGender)))
+                                    {
+                                        <option value="@gender">@gender.GetDisplayName()</option>
+                                    }
+                                </select>
+                            </div>
+                            <div class="col-md-6">
+                                <label asp-for="BirthDate" class="form-label">Data de Nascimento</label>
+                                <input asp-for="BirthDate" type="date" class="form-control">
+                            </div>
                         </div>
-                        <div class="col-md-6">
-                            <label asp-for="Email" class="form-label">E-mail</label>
-                            <input asp-for="Email" type="email" class="form-control">
+                    </div>
+
+                    <!-- Address Tab -->
+                    <div class="tab-pane fade" id="address" role="tabpanel" aria-labelledby="address-tab">
+                        <div class="row g-3">
+                            <div class="col-md-6">
+                                <label asp-for="Street" class="form-label">Rua</label>
+                                <input asp-for="Street" type="text" class="form-control">
+                            </div>
+                            <div class="col-md-3">
+                                <label asp-for="Number" class="form-label">Número</label>
+                                <input asp-for="Number" type="number" min="1" class="form-control">
+                            </div>
+                            <div class="col-md-3">
+                                <label asp-for="Complement" class="form-label">Complemento</label>
+                                <input asp-for="Complement" type="text" class="form-control">
+                            </div>
+                            <div class="col-md-6">
+                                <label asp-for="Neighborhood" class="form-label">Bairro</label>
+                                <input asp-for="Neighborhood" type="text" class="form-control">
+                            </div>
+                            <div class="col-md-6">
+                                <label asp-for="City" class="form-label">Cidade</label>
+                                <input asp-for="City" type="text" class="form-control">
+                            </div>
+                            <div class="col-md-6">
+                                <label for="State" class="form-label">Estado <span style="color: red;">*</span></label>
+                                <select id="State" name="State" class="form-select shadow-none">
+                                    <option value="@Model.State">@Model.State</option>
+                                    <option value="AC">AC</option>
+                                    <option value="AL">AL</option>
+                                    <option value="AP">AP</option>
+                                    <option value="AM">AM</option>
+                                    <option value="BA">BA</option>
+                                    <option value="CE">CE</option>
+                                    <option value="DF">DF</option>
+                                    <option value="ES">ES</option>
+                                    <option value="GO">GO</option>
+                                    <option value="MA">MA</option>
+                                    <option value="MT">MT</option>
+                                    <option value="MS">MS</option>
+                                    <option value="MG">MG</option>
+                                    <option value="PA">PA</option>
+                                    <option value="PB">PB</option>
+                                    <option value="PR">PR</option>
+                                    <option value="PE">PE</option>
+                                    <option value="PI">PI</option>
+                                    <option value="RJ">RJ</option>
+                                    <option value="RN">RN</option>
+                                    <option value="RS">RS</option>
+                                    <option value="RO">RO</option>
+                                    <option value="RR">RR</option>
+                                    <option value="SC">SC</option>
+                                    <option value="SP">SP</option>
+                                    <option value="SE">SE</option>
+                                    <option value="TO">TO</option>
+                                </select>
+                                <span class="text-danger" id="state-validation"></span>
+                                <br>
+                            </div>
+                            <div class="col-md-6">
+                                <label asp-for="PostalCode" class="form-label">CEP</label>
+                                <input asp-for="PostalCode" type="text" class="form-control">
+                            </div>
                         </div>
-                        <div class="col-md-6">
-                            <label asp-for="Document" class="form-label">CPF</label>
-                            <input asp-for="Document" type="text" class="form-control">
+                    </div>
+
+                    <!-- Security Tab -->
+                    <div class="tab-pane fade" id="security" role="tabpanel" aria-labelledby="security-tab">
+                        <div class="row g-3">
+                            <div class="col-md-6">
+                                <label asp-for="Password" class="form-label">Senha Atual</label>
+                                <input asp-for="Password" type="password" class="form-control">
+                                <span asp-validation-for="Password"></span>
+                            </div>
+                            <div class="col-md-6">
+                                <label asp-for="NewPassword" class="form-label">Nova Senha</label>
+                                <input asp-for="NewPassword" type="password" class="form-control">
+                                <span asp-validation-for="NewPassword"></span>
+                            </div>
                         </div>
-                        <div class="col-md-6">
-                            <label asp-for="PhoneNumber" class="form-label">Telefone</label>
-                            <input asp-for="PhoneNumber" type="tel" class="form-control">
-                        </div>
-                        <div class="col-md-6">
-                            <label asp-for="@Model.Gender" class="form-label">Gênero</label>
-                            <select asp-for="@Model.Gender" class="form-select">
-                                <option value="" disabled>Selecione</option>
-                                @foreach (EGender gender in Enum.GetValues(typeof(EGender)))
-                                {
-                                <option value="@gender">@gender.GetDisplayName()</option>
-                                }
-                            </select>
-                        </div>
-                        <div class="col-md-6">
-                            <label asp-for="BirthDate" class="form-label">Data de Nascimento</label>
-                            <input asp-for="BirthDate" type="date" class="form-control">
-                        </div>
-                        <div class="col-12 text-end">
-                            <button type="submit" class="btn btn-primary">Salvar Alterações</button>
-                        </div>
-                    </form>
+                    </div>
                 </div>
 
-                <!-- Address Tab -->
-                <div class="tab-pane fade" id="address" role="tabpanel" aria-labelledby="address-tab">
-                    <form class="row g-3">
-                        <div class="col-md-6">
-                            <label asp-for="Street" class="form-label">Rua</label>
-                            <input asp-for="Street" type="text" class="form-control">
-                        </div>
-                        <div class="col-md-3">
-                            <label asp-for="Number" class="form-label">Número</label>
-                            <input asp-for="Number" type="number" class="form-control">
-                        </div>
-                        <div class="col-md-3">
-                            <label asp-for="Complement" class="form-label">Complemento</label>
-                            <input asp-for="Complement" type="text" class="form-control">
-                        </div>
-                        <div class="col-md-6">
-                            <label asp-for="Neighborhood" class="form-label">Bairro</label>
-                            <input asp-for="Neighborhood" type="text" class="form-control">
-                        </div>
-                        <div class="col-md-6">
-                            <label asp-for="City" class="form-label">Cidade</label>
-                            <input asp-for="City" type="text" class="form-control">
-                        </div>
-                        <div class="col-md-6">
-                            <label asp-for="State" class="form-label">Estado</label>
-                            <input asp-for="State" type="text" class="form-control">
-                        </div>
-                        <div class="col-md-6">
-                            <label asp-for="PostalCode" class="form-label">CEP</label>
-                            <input asp-for="PostalCode" type="text" class="form-control">
-                        </div>
-                        <div class="col-12 text-end">
-                            <button type="submit" class="btn btn-primary">Salvar Alterações</button>
-                        </div>
-                    </form>
+                <!-- Submit Button -->
+                <div class="col-12 text-end">
+                    <button type="submit" class="btn btn-primary">Salvar Todas as Alterações</button>
                 </div>
-
-                <!-- Security Tab -->
-                <div class="tab-pane fade" id="security" role="tabpanel" aria-labelledby="security-tab">
-                    <form class="row g-3">
-                        <div class="col-md-6">
-                            <label asp-for="Password" class="form-label">Nova Senha</label>
-                            <input asp-for="Password" type="password" class="form-control">
-                        </div>
-                        <div class="col-md-6">
-                            <label for="ConfirmPassword" class="form-label">Confirmar Senha</label>
-                            <input id="ConfirmPassword" name="ConfirmPassword" type="password" class="form-control">
-                        </div>
-                        <div class="col-12 text-end">
-                            <button type="submit" class="btn btn-primary">Alterar Senha</button>
-                        </div>
-                    </form>
-                </div>
-            </div>
+            </form>
         </div>
     </div>
 </div>
