--- a/PetworldOficial.Presentation/PetworldOficial.MVC/Views/User/Update.cshtml
+++ b/PetworldOficial.Presentation/PetworldOficial.MVC/Views/User/Update.cshtml
@@ -16,7 +16,6 @@
     <br>
 </div>
 
-
 <form class="row g-3 d-flex justify-content-center align-items-center" asp-controller="User" asp-action="Update" method="post">
     <div class="col-md-10">
         <label>
@@ -24,7 +23,6 @@
         </label>
     </div>
     <input type="hidden" asp-for="@Model.Id">
-    @* <input type="hidden" asp-for="@Model.UserName"> *@
     <input type="hidden" asp-for="@Model.Gender">
 
     <div class="col-md-10">
@@ -113,9 +111,38 @@
     </div>
 
     <div class="col-md-5">
-        <label asp-for="State" class="form-label">Estado <span style="color: red;">*</span></label>
-        <input asp-for="State" type="text" class="form-control shadow-none">
-        <span asp-validation-for="State" class="text-danger"></span>
+        <label for="State" class="form-label">Estado <span style="color: red;">*</span></label>
+        <select id="State" name="State" class="form-select shadow-none">
+            <option value="@Model.State">@Model.State</option>
+            <option value="AC">AC</option>
+            <option value="AL">AL</option>
+            <option value="AP">AP</option>
+            <option value="AM">AM</option>
+            <option value="BA">BA</option>
+            <option value="CE">CE</option>
+            <option value="DF">DF</option>
+            <option value="ES">ES</option>
+            <option value="GO">GO</option>
+            <option value="MA">MA</option>
+            <option value="MT">MT</option>
+            <option value="MS">MS</option>
+            <option value="MG">MG</option>
+            <option value="PA">PA</option>
+            <option value="PB">PB</option>
+            <option value="PR">PR</option>
+            <option value="PE">PE</option>
+            <option value="PI">PI</option>
+            <option value="RJ">RJ</option>
+            <option value="RN">RN</option>
+            <option value="RS">RS</option>
+            <option value="RO">RO</option>
+            <option value="RR">RR</option>
+            <option value="SC">SC</option>
+            <option value="SP">SP</option>
+            <option value="SE">SE</option>
+            <option value="TO">TO</option>
+        </select>
+        <span class="text-danger" id="state-validation"></span>
         <br>
     </div>
     <div class="d-flex justify-content-center align-items-center">
