--- a/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Home/Index.cshtml
+++ b/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Home/Index.cshtml
@@ -6,7 +6,7 @@
 @if (TempData["ErrorMessage"] != null)
 {
     <div class="d-flex justify-content-center align-items-center">
-        <div class="alert alert-danger col-md-10" role="alert">
+        <div class="alert alert-danger col-12 col-md-10" role="alert">
             @TempData["ErrorMessage"]
             <button style="position: absolute; top: 0.7rem; right: 0; padding: 0.5rem 1rem;" type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
         </div>
@@ -15,7 +15,7 @@
 else if (TempData["SuccessMessage"] != null)
 {
     <div class="d-flex justify-content-center align-items-center">
-        <div class="alert alert-success col-md-10" role="alert">
+        <div class="alert alert-success col-12 col-md-10" role="alert">
             @TempData["SuccessMessage"]
             <button style="position: absolute; top: 0.7rem; right: 0; padding: 0.5rem 1rem;" type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
         </div>
@@ -25,41 +25,19 @@ else if (TempData["SuccessMessage"] != null)
 <div id="carouselBasicExample" class="carousel slide carousel-fade" data-mdb-ride="carousel" data-mdb-carousel-init>
     <!-- Indicators -->
     <div class="carousel-indicators">
-        <button
-            type="button"
-            data-mdb-target="#carouselBasicExample"
-            data-mdb-slide-to="0"
-            class="active"
-            aria-current="true"
-            aria-label="Slide 1">
-        </button>
-        <button
-            type="button"
-            data-mdb-target="#carouselBasicExample"
-            data-mdb-slide-to="1"
-            aria-label="Slide 2">
-        </button>
-        <button
-            type="button"
-            data-mdb-target="#carouselBasicExample"
-            data-mdb-slide-to="2"
-            aria-label="Slide 3">
-        </button>
+        <button type="button" data-mdb-target="#carouselBasicExample" data-mdb-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-mdb-target="#carouselBasicExample" data-mdb-slide-to="1" aria-label="Slide 2"></button>
+        <button type="button" data-mdb-target="#carouselBasicExample" data-mdb-slide-to="2" aria-label="Slide 3"></button>
     </div>
 
     <!-- Inner -->
     <div class="carousel-inner">
-        <!-- Single item -->
         <div class="carousel-item active">
             <img src="Images/Banner1PetWorld.jpeg" class="d-block w-100" alt="Sunset Over the City"/>
         </div>
-
-        <!-- Single item -->
         <div class="carousel-item">
-            <img src="Images/Banner2PetWorld.jpeg" class="d-block w-100" alt="Canyon at Nigh"/>
+            <img src="Images/Banner2PetWorld.jpeg" class="d-block w-100" alt="Canyon at Night"/>
         </div>
-
-        <!-- Single item -->
         <div class="carousel-item">
             <img src="Images/Banner3PetWorld.jpeg" class="d-block w-100" alt="Cliff Above a Stormy Sea"/>
         </div>
@@ -79,78 +57,87 @@ else if (TempData["SuccessMessage"] != null)
         <span class="visually-hidden">Next</span>
     </button>
 </div>
-<!-- Carousel wrapper -->
 
 <!-- Services Section -->
 <section id="services" class="container my-5">
     <h2 class="text-center">Nossos Serviços</h2>
     <div class="row text-center mt-4">
-        <div class="col-md-4">
+        <div class="col-6 col-md-3 mb-4">
             <div class="service-item">
                 <a asp-action="Index" asp-controller="Service">
-                    <img src="/Images/d50cec2a-644a-444a-8882-89ae3621b9ae.jpg" class="rounded-circle" alt="Banho e Tosa">
+                    <img src="/Images/d50cec2a-644a-444a-8882-89ae3621b9ae.jpg" class="service-img" alt="Banho e Tosa"/>
                 </a>
                 <h5 class="mt-3">Banho</h5>
                 <p>Deixe seu pet limpinho e cheiroso com nossos especialistas.</p>
             </div>
         </div>
-        <div class="col-md-4">
+        <div class="col-6 col-md-3 mb-4">
             <div class="service-item">
                 <a asp-action="Index" asp-controller="Service">
-                    <img src="/Images/d37bec38-ec8c-45f6-af7c-400312356b22.jpg" class="rounded-circle" alt="Veterinário">
+                    <img src="/Images/d37bec38-ec8c-45f6-af7c-400312356b22.jpg" class="service-img" alt="Veterinário"/>
                 </a>
                 <h5 class="mt-3">Atendimento Veterinário</h5>
                 <p>Cuidados completos com saúde e bem-estar do seu pet.</p>
             </div>
         </div>
-        <div class="col-md-4">
+        <div class="col-6 col-md-3 mb-4">
             <div class="service-item">
                 <a asp-action="Index" asp-controller="Service">
-                    <img src="/Images/4a1e33b4-8eee-4dca-9590-512c964f0111.jpg" class="rounded-circle" alt="Creche para Pets">
+                    <img src="/Images/4a1e33b4-8eee-4dca-9590-512c964f0111.jpg" class="service-img" alt="Creche para Pets"/>
                 </a>
                 <h5 class="mt-3">Tosa</h5>
                 <p>Deixe seu pet sempre bem aparado com nossos especialistas.</p>
+            </div>
+        </div>
+        <div class="col-6 col-md-3 mb-4">
+            <div class="service-item">
+                <a asp-action="Index" asp-controller="Service">
+                    <img src="/Images/ImagemBanho&Tosa.jpg" class="service-img" alt="Creche para Pets"/>
+                </a>
+                <h5 class="mt-3">Banho & Tosa</h5>
+                <p>Deixe seu pet limpinho e bem aparado, com um toque de carinho e cuidado.</p>
             </div>
         </div>
     </div>
 </section>
 
 <style>
-    .service-item img {
-        width: 200px;
-        height: 200px;
-        object-fit: cover;
+    .service-img {
+        width: 150px; /* Tamanho fixo */
+        height: 150px; /* Tamanho fixo */
+        object-fit: cover; /* Ajuste para cobrir sem distorcer */
+        border-radius: 50%; /* Torna a imagem circular */
         border: 5px solid #ddd;
+        transition: transform 0.3s ease, box-shadow 0.3s ease;
     }
 
     .service-item {
         padding: 20px;
+        border-radius: 8px;
     }
 
     .service-item h5 {
         font-weight: bold;
     }
+
+    /* Efeito de hover */
+    .service-item:hover .service-img {
+        transform: scale(1.1); /* Aumenta a imagem */
+        box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2); /* Sombra ao redor da imagem */
+    }
+
+    .service-item:hover {
+        background-color: #f8f9fa; /* Cor de fundo ao passar o mouse */
+        border-radius: 8px; /* Adiciona borda arredondada */
+        transition: background-color 0.3s ease;
+    }
 </style>
 
-<!-- Contact Section -->
 <section id="contact" class="container my-5">
-    <h2 class="text-center">Fale Conosco</h2>
-    <br>
-    <form class="mt-4">
-        <div class="row">
-            <div class="col-md-6 mb-3">
-                <input type="text" class="form-control" placeholder="Nome">
-            </div>
-            <div class="col-md-6 mb-3">
-                <input type="email" class="form-control" placeholder="Email">
-            </div>
+    <h2 class="text-center">Onde Estamos</h2>
+    <div class="mt-4">
+        <div class="embed-responsive embed-responsive-16by9">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14586.010926824458!2d-46.3263839!3d-23.9426566!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce024465fa95bf%3A0x1e411e16e8228ce3!2sFatec%20Baixada%20Santista%20-%20Faculdade%20de%20Tecnologia%20-%20Rubens%20Lara!5e0!3m2!1spt-BR!2sbr!4v1732418373161!5m2!1spt-BR!2sbr" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
-        <div class="mb-3">
-            <textarea class="form-control" rows="4" placeholder="Mensagem"></textarea>
-        </div>
-        <!-- Centralizando apenas o botão -->
-        <div class="d-flex justify-content-center">
-            <button type="submit" class="btn btn-primary">Enviar Mensagem</button>
-        </div>
-    </form>
+    </div>
 </section>
