fix: cultureinfo definida como pt-BR por padrão.

--- a/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Animal/Delete.cshtml
+++ b/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Animal/Delete.cshtml
@@ -6,7 +6,7 @@
 @{
     ViewData["Title"] = "Deletar Pet";
     Layout = "_Layout";
-    var gender = (EGender)Enum.Parse(typeof(EGender), Model.Gender);
+    var gender = (EPetGender)Enum.Parse(typeof(EPetGender), Model.Gender);
 }
 
 <div class="container-fluid py-3">
