--- a/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Animal/Index.cshtml
+++ b/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Animal/Index.cshtml
@@ -78,8 +78,8 @@ else if (TempData["SuccessMessage"] != null)
                         </div>
                         <div class="col-md-6 d-flex justify-content-end">
                             <div class="input-group">
-                                <input type="text" id="searchInput" class="form-control" placeholder="Pesquisar serviços..."
-                                       aria-label="Pesquisar serviços" aria-describedby="search-addon" oninput="searchPet()">
+                                <input type="text" id="searchInput" class="form-control" placeholder="Pesquisar pets..."
+                                       aria-label="Pesquisar pets" aria-describedby="search-addon" oninput="searchPet()">
                                 <span class="input-group-text" id="search-addon">
                                     <i class="fas fa-search"></i>
                                 </span>
@@ -169,8 +169,8 @@ else if (TempData["SuccessMessage"] != null)
                         </div>
                         <div class="col-md-6 d-flex justify-content-end">
                             <div class="input-group">
-                                <input type="text" id="searchInput" class="form-control" placeholder="Pesquisar serviços..."
-                                       aria-label="Pesquisar serviços" aria-describedby="search-addon" oninput="searchPet()">
+                                <input type="text" id="searchInput" class="form-control" placeholder="Pesquisar pets..."
+                                       aria-label="Pesquisar pets" aria-describedby="search-addon" oninput="searchPet()">
                                 <span class="input-group-text" id="search-addon">
                                     <i class="fas fa-search"></i>
                                 </span>
