--- a/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Schedule/Index.cshtml
+++ b/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Schedule/Index.cshtml
@@ -69,8 +69,8 @@ else if (TempData["SuccessMessage"] != null)
 
                     <div class="col-md-12 d-flex justify-content-end">
                         <div class="input-group">
-                            <input type="text" id="searchInput" class="form-control" placeholder="Pesquisar serviços..."
-                                   aria-label="Pesquisar serviços" aria-describedby="search-addon" oninput="searchScheduling()">
+                            <input type="text" id="searchInput" class="form-control" placeholder="Pesquisar agendamentos..."
+                                   aria-label="Pesquisar agendamentos" aria-describedby="search-addon" oninput="searchScheduling()">
                             <span class="input-group-text" id="search-addon">
                                 <i class="fas fa-search"></i>
                             </span>
