--- a/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Supplier/Index.cshtml
+++ b/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Supplier/Index.cshtml
@@ -44,8 +44,8 @@
                 </div>
                 <div class="col-md-6 d-flex justify-content-end">
                     <div class="input-group">
-                        <input type="text" id="searchInput" class="form-control" placeholder="Pesquisar serviços..."
-                               aria-label="Pesquisar serviços" aria-describedby="search-addon" oninput="searchSupplier()">
+                        <input type="text" id="searchInput" class="form-control" placeholder="Pesquisar fornecedores..."
+                               aria-label="Pesquisar fornecedores" aria-describedby="search-addon" oninput="searchSupplier()">
                         <span class="input-group-text" id="search-addon">
                             <i class="fas fa-search"></i>
                         </span>
