--- a/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Checkout/Success.cshtml
+++ b/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Checkout/Success.cshtml
@@ -191,7 +191,7 @@ else
         </h2>
         <div class="d-flex justify-content-center align-items-center">
             <a class="btn btn-dark fw-normal shadow-none" asp-controller="Animal" asp-action="Register">
-                <img style="width: 25px" src="/Images/addition.svg" alt="">Novo Pet
+                Novo Pet
             </a>
         </div>
     </div>
