--- a/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Service/Index.cshtml
+++ b/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Service/Index.cshtml
@@ -156,7 +156,7 @@ else
         {
             <div class="d-flex justify-content-center align-items-center">
                 <a class="btn btn-dark fw-normal shadow-none" asp-controller="Service" asp-action="Create">
-                    Adicionar Serviço
+                    Novo Serviço
                 </a>
             </div>
         }
