--- a/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Supplier/Index.cshtml
+++ b/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Supplier/Index.cshtml
@@ -107,7 +107,7 @@ else
     <div class="d-flex justify-content-center align-items-center">
         <br>
         <a class="btn btn-dark fw-normal shadow-none" asp-controller="Supplier" asp-action="Register">
-            Adicionar Fornecedor
+            Novo Fornecedor
         </a>
     </div>
 }
