chore: removidas todas imagens desnecessárias

--- a/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Home/Index.cshtml
+++ b/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Home/Index.cshtml
@@ -65,7 +65,7 @@ else if (TempData["SuccessMessage"] != null)
         <div class="col-6 col-md-3 mb-4">
             <div class="service-item">
                 <a asp-action="Index" asp-controller="Service">
-                    <img src="/Images/d50cec2a-644a-444a-8882-89ae3621b9ae.jpg" class="service-img" alt="Banho e Tosa"/>
+                    <img src="/Images/BanhoCachorro.jpg" class="service-img" alt="Banho e Tosa"/>
                 </a>
                 <h5 class="mt-3">Banho</h5>
                 <p>Deixe seu pet limpinho e cheiroso com nossos especialistas.</p>
@@ -74,7 +74,7 @@ else if (TempData["SuccessMessage"] != null)
         <div class="col-6 col-md-3 mb-4">
             <div class="service-item">
                 <a asp-action="Index" asp-controller="Service">
-                    <img src="/Images/d37bec38-ec8c-45f6-af7c-400312356b22.jpg" class="service-img" alt="Veterinário"/>
+                    <img src="/Images/Veterinario.jpg" class="service-img" alt="Veterinário"/>
                 </a>
                 <h5 class="mt-3">Atendimento Veterinário</h5>
                 <p>Cuidados completos com saúde e bem-estar do seu pet.</p>
@@ -83,7 +83,7 @@ else if (TempData["SuccessMessage"] != null)
         <div class="col-6 col-md-3 mb-4">
             <div class="service-item">
                 <a asp-action="Index" asp-controller="Service">
-                    <img src="/Images/4a1e33b4-8eee-4dca-9590-512c964f0111.jpg" class="service-img" alt="Creche para Pets"/>
+                    <img src="/Images/Tosa.jpg" class="service-img" alt="Tosa"/>
                 </a>
                 <h5 class="mt-3">Tosa</h5>
                 <p>Deixe seu pet sempre bem aparado com nossos especialistas.</p>
