--- a/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Animal/Index.cshtml
+++ b/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Animal/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@using PetWorldOficial.Domain.Enums
+﻿@using PetWorldOficial.Application.Extensions
+@using PetWorldOficial.Domain.Enums
 @using PetworldOficial.MVC.Utils
 @model IEnumerable<PetWorldOficial.Application.ViewModels.Animal.AnimalDetailsViewModel>
 
@@ -116,7 +117,7 @@ else if (TempData["SuccessMessage"] != null)
                                                     <strong>Dono:</strong> @animal.Owner?.Name
                                                 </p>
                                                 <p class="card-text">
-                                                    <strong>CPF do dono:</strong> @animal.Owner?.Document
+                                                    <strong>CPF do dono:</strong> @animal.Owner?.Document.MaskCPF()
                                                 </p>
                                                 <p class="card-text">
                                                     <strong>Gênero:</strong> @(Enum.Parse<EPetGender>(animal.Gender).GetDisplayName())
