--- a/PetworldOficial.Presentation/PetworldOficial.MVC/Views/User/Index.cshtml
+++ b/PetworldOficial.Presentation/PetworldOficial.MVC/Views/User/Index.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Mvc.TagHelpers
+@using PetWorldOficial.Application.Extensions
 @using PetWorldOficial.Domain.Enums
 @using PetworldOficial.MVC.Utils
 @model IEnumerable<PetWorldOficial.Application.ViewModels.User.UserDetailsViewModel>
@@ -72,7 +73,7 @@ else if (TempData["SuccessMessage"] != null)
                                             <strong>Genêro:</strong> @(Enum.Parse<EGender>(user.Gender).GetDisplayName())
                                         </p>
                                         <p class="card-text">
-                                            <strong>CPF:</strong> @user.Document
+                                            <strong>CPF:</strong> @user.Document.MaskCPF()
                                         </p>
                                         <p class="card-text">
                                             <strong>Email:</strong> @user.Email
