--- a/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Auth/Register.cshtml
+++ b/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Auth/Register.cshtml
@@ -64,23 +64,23 @@ else if (TempData["SuccessMessage"] != null)
                     <div class="tab-pane fade show active" id="personal" role="tabpanel" aria-labelledby="personal-tab">
                         <div class="row g-3">
                             <div class="col-md-6">
-                                <label asp-for="Name" class="form-label">Nome</label>
+                                <label asp-for="Name" class="form-label">Nome <span style="color: red;">*</span></label>
                                 <input asp-for="Name" type="text" class="form-control">
                             </div>
                             <div class="col-md-6">
-                                <label asp-for="Email" class="form-label">E-mail</label>
+                                <label asp-for="Email" class="form-label">E-mail <span style="color: red;">*</span></label>
                                 <input asp-for="Email" type="email" class="form-control">
                             </div>
                             <div class="col-md-6">
-                                <label asp-for="Document" class="form-label">CPF</label>
+                                <label asp-for="Document" class="form-label">CPF <span style="color: red;">*</span></label>
                                 <input asp-for="Document" type="text" class="form-control">
                             </div>
                             <div class="col-md-6">
-                                <label asp-for="PhoneNumber" class="form-label">Telefone</label>
+                                <label asp-for="PhoneNumber" class="form-label">Telefone <span style="color: red;">*</span></label>
                                 <input asp-for="PhoneNumber" type="tel" class="form-control">
                             </div>
                             <div class="col-md-6">
-                                <label asp-for="@Model.Gender" class="form-label">Gênero</label>
+                                <label asp-for="@Model.Gender" class="form-label">Gênero <span style="color: red;">*</span></label>
                                 <select asp-for="@Model.Gender" class="form-select">
                                     <option value="" selected disabled>Selecione o gênero</option>
                                     @foreach (EGender gender in Enum.GetValues(typeof(EGender)))
@@ -90,7 +90,7 @@ else if (TempData["SuccessMessage"] != null)
                                 </select>
                             </div>
                             <div class="col-md-6">
-                                <label asp-for="BirthDate" class="form-label">Data de Nascimento</label>
+                                <label asp-for="BirthDate" class="form-label">Data de Nascimento <span style="color: red;">*</span></label>
                                 <input asp-for="BirthDate" type="date" class="form-control">
                             </div>
                         </div>
@@ -100,23 +100,23 @@ else if (TempData["SuccessMessage"] != null)
                     <div class="tab-pane fade" id="address" role="tabpanel" aria-labelledby="address-tab">
                         <div class="row g-3">
                             <div class="col-md-6">
-                                <label asp-for="Street" class="form-label">Rua</label>
+                                <label asp-for="Street" class="form-label">Rua <span style="color: red;">*</span></label>
                                 <input asp-for="Street" type="text" class="form-control">
                             </div>
                             <div class="col-md-3">
-                                <label asp-for="Number" class="form-label">Número</label>
-                                <input asp-for="Number" type="number" min="1" class="form-control">
+                                <label asp-for="Number" class="form-label">Número <span style="color: red;">*</span></label>
+                                <input asp-for="Number" type="number" min="0" class="form-control">
                             </div>
                             <div class="col-md-3">
                                 <label asp-for="Complement" class="form-label">Complemento</label>
                                 <input asp-for="Complement" type="text" class="form-control">
                             </div>
                             <div class="col-md-6">
-                                <label asp-for="Neighborhood" class="form-label">Bairro</label>
+                                <label asp-for="Neighborhood" class="form-label">Bairro <span style="color: red;">*</span></label>
                                 <input asp-for="Neighborhood" type="text" class="form-control">
                             </div>
                             <div class="col-md-6">
-                                <label asp-for="City" class="form-label">Cidade</label>
+                                <label asp-for="City" class="form-label">Cidade <span style="color: red;">*</span></label>
                                 <input asp-for="City" type="text" class="form-control">
                             </div>
                             <div class="col-md-6">
@@ -155,7 +155,7 @@ else if (TempData["SuccessMessage"] != null)
                                 <br>
                             </div>
                             <div class="col-md-6">
-                                <label asp-for="PostalCode" class="form-label">CEP</label>
+                                <label asp-for="PostalCode" class="form-label">CEP <span style="color: red;">*</span></label>
                                 <input asp-for="PostalCode" type="text" class="form-control">
                             </div>
                         </div>
@@ -167,7 +167,7 @@ else if (TempData["SuccessMessage"] != null)
                             @if (User.IsInRole(ERole.Admin.ToString()))
                             {
                                 <div class="col-md-12">
-                                    <label asp-for="Role" class="form-label">Perfil</label>
+                                    <label asp-for="Role" class="form-label">Perfil <span style="color: red;">*</span></label>
                                     <select asp-for="@Model.Role" class="form-select">
                                         <option value="" selected disabled>Selecione o perfil</option>
                                         @foreach (ERole role in Enum.GetValues(typeof(ERole)))
@@ -178,11 +178,11 @@ else if (TempData["SuccessMessage"] != null)
                                 </div>
                             }
                             <div class="col-md-6">
-                                <label asp-for="Password" class="form-label">Senha</label>
+                                <label asp-for="Password" class="form-label">Senha <span style="color: red;">*</span></label>
                                 <input asp-for="Password" type="password" class="form-control">
                             </div>
                             <div class="col-md-6">
-                                <label asp-for="ConfirmPassword" class="form-label">Confirme a Senha</label>
+                                <label asp-for="ConfirmPassword" class="form-label">Confirme a Senha <span style="color: red;">*</span></label>
                                 <input asp-for="ConfirmPassword" type="password" class="form-control">
                             </div>
                         </div>
