--- a/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Product/Update.cshtml
+++ b/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Product/Update.cshtml
@@ -9,11 +9,35 @@
 
 <div class="container-fluid py-3">
     <br>
-    <h2 class="text-center">
+    <h1 class="text-center">
         Dados do Produto
-    </h2>
+    </h1>
     <br>
 </div>
+
+@if (TempData["ErrorMessage"] != null)
+{
+    <div class="d-flex justify-content-center align-items-center">
+        <div class="col-md-8 alert alert-danger" role="alert">
+            @TempData["ErrorMessage"]
+            <button style="position: absolute; top: 0.7rem; right: 0; padding: 0.5rem 1rem;" type="button" class="btn-close"
+                    data-bs-dismiss="alert" aria-label="Close">
+            </button>
+        </div>
+    </div>
+}
+
+@if (TempData["SuccessMessage"] != null)
+{
+    <div class="d-flex justify-content-center align-items-center">
+        <div class="col-md-8 alert alert-success" role="alert">
+            @TempData["SuccessMessage"]
+            <button style="position: absolute; top: 0.7rem; right: 0; padding: 0.5rem 1rem;" type="button" class="btn-close"
+                    data-bs-dismiss="alert" aria-label="Close">
+            </button>
+        </div>
+    </div>
+}
 
 <div class="d-flex justify-content-center align-items-center">
     @if (Model.ImageUrl != null)
@@ -30,8 +54,8 @@
         <input type="hidden" asp-for="@Model.ProductId"/>
         <input type="hidden" asp-for="@Model.SupplierId"/>
         <input type="hidden" asp-for="@Model.SupplierName"/>
-        <input type="hidden" asp-for="@Model.CategoryId"/>
-        <input type="hidden" asp-for="@Model.CategoryName"/>
+        @* <input type="hidden" asp-for="@Model.CategoryId"/> *@
+        @* <input type="hidden" asp-for="@Model.CategoryName"/> *@
 
         <div class="col-md-8">
             <label asp-for="@Model.Name" class="form-label">Nome <span style="color: red;">*</span></label>
