--- a/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Schedule/Update.cshtml
+++ b/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Schedule/Update.cshtml
@@ -6,11 +6,11 @@
     Layout = "_Layout";
 }
 
-<div class="container-fluid text-black py-3">
+<div class="container-fluid py-3">
     <br>
-    <h2 class="text-center">
+    <h1 class="text-center">
         Agendamento de Serviços
-    </h2>
+    </h1>
     <br>
 </div>
 
