--- a/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Shared/_Layout.cshtml
+++ b/PetworldOficial.Presentation/PetworldOficial.MVC/Views/Shared/_Layout.cshtml
@@ -1,55 +1,69 @@
-﻿<!DOCTYPE html>
+﻿@using PetWorldOficial.Domain.Enums
+<!DOCTYPE html>
 <html lang="pt-br">
 
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>@ViewData["Title"]</title>
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="~/css/style.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="~/css/style.css" asp-append-version="true"/>
     <link rel="icon" href="/Images/faviconPaw.ico">
-    <link rel="stylesheet" href="~/css/mdb-ui-kit/css/mdb.min.css" />
+    <link rel="stylesheet" href="~/css/mdb-ui-kit/css/mdb.min.css"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-    <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
+    <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet"/>
     <link
-        href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Rowdies:wght@300;400;700&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900&family=Rowdies:wght@300;400;700&display=swap"
         rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.4.0/mdb.min.css" rel="stylesheet">
 </head>
 
 <body style="background-color: #e9e9e9">
-    <header>
-        <partial name="NavMenuPartial"></partial>
-        <br>
-    </header>
-    <div class="container">
-        <main role="main" class="pb-3">
-            @RenderBody()
-        </main>
+<header>
+    <partial name="NavMenuPartial"></partial>
+    <br>
+</header>
+<div class="container">
+    <main role="main" class="pb-3">
+        @RenderBody()
+    </main>
+</div>
+@if (!User.IsInRole(ERole.Admin.ToString()))
+{
+    <!-- Botão flutuante do WhatsApp -->
+    <div id="whatsapp-button" style="position: fixed; bottom: 20px; right: 20px; z-index: 1000;">
+        <button
+            onclick="openWhatsApp()"
+            style="background-color: #25D366; color: white; border: none; border-radius: 50%; padding: 15px; width: 60px; height: 60px; font-size: 24px; display: flex; justify-content: center; align-items: center; box-shadow: 0px 4px 6px rgba(0,0,0,0.2); cursor: pointer;">
+            <i class="fab fa-whatsapp"></i>
+        </button>
     </div>
+}
 
-    <!-- Scripts -->
-    <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.10.0/mdb.min.js"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.4.0/mdb.min.js"></script>
-    <script type="module" src="~/js/site.js" asp-append-version="true"></script>
-    @await RenderSectionAsync("Scripts", required: false)
+<!-- Scripts -->
+<script src="~/lib/jquery/dist/jquery.min.js"></script>
+<script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.10.0/mdb.min.js"></script>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.4.0/mdb.min.js"></script>
+<script type="module" src="~/js/site.js" asp-append-version="true"></script>
+<script>
+    // Função para abrir o WhatsApp Web em um pop-up
+    function openWhatsApp() {
+        const whatsappUrl = "https://wa.me/";
+        window.open(whatsappUrl, "WhatsApp", "width=800,height=600");
+    }
+</script>
+@await RenderSectionAsync("Scripts", required: false)
 </body>
 <!-- Footer -->
 <footer style="background-color: #f9f9f9; margin-top: 20px;" class="text-center text-lg-start text-muted mt-5">
-    <!-- Section: Social media -->
     <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
-        <!-- Left -->
         <div class="me-5 d-none d-lg-block">
             <span>Nos acompanhe nas redes sociais:</span>
         </div>
-        <!-- Left -->
-
-        <!-- Right -->
         <div>
             <a href="" class="me-4 text-reset">
                 <i class="fab fa-facebook-f"></i>
@@ -61,73 +75,41 @@
                 <i class="fab fa-instagram"></i>
             </a>
         </div>
-        <!-- Right -->
     </section>
-    <!-- Section: Social media -->
-
-    <!-- Section: Links  -->
     <section class="">
         <div class="container text-center text-md-start mt-5">
-            <!-- Grid row -->
             <div class="row mt-3">
-                <!-- Grid column -->
                 <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
-                    <!-- Content -->
                     <h6 class="text-uppercase fw-bold mb-4">Pet World</h6>
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                        Corporis facere id natus omnis repudiandae ut,
-                        voluptate. Asperiores consequuntur corporis fugiat,
-                        itaque, molestias natus nemo perspiciatis quas quibusdam sapiente sunt vitae.
+                        Bem-vindo à PetWorld! Somos apaixonados pelo universo pet e dedicados a oferecer os melhores
+                        produtos e serviços para o bem-estar do seu animal de estimação. Aqui, você encontra tudo o que
+                        precisa, desde acessórios e alimentos até serviços personalizados, como banho, tosa e muito mais.
+                        Conte com a gente para cuidar de quem você ama!
                     </p>
                 </div>
-                <!-- Grid column -->
-
-                <!-- Grid column -->
-                @* <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4"> *@
-                @*     <!-- Links --> *@
-                @*     <h6 class="text-uppercase fw-bold mb-4"> *@
-                @*         Products *@
-                @*     </h6> *@
-                @*     <p> *@
-                @*         <a href="#!" class="text-reset">Angular</a> *@
-                @*     </p> *@
-                @*     <p> *@
-                @*         <a href="#!" class="text-reset">React</a> *@
-                @*     </p> *@
-                @*     <p> *@
-                @*         <a href="#!" class="text-reset">Vue</a> *@
-                @*     </p> *@
-                @*     <p> *@
-                @*         <a href="#!" class="text-reset">Laravel</a> *@
-                @*     </p> *@
-                @* </div> *@
-                <!-- Grid column -->
-
-                <!-- Grid column -->
                 <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
-                    <!-- Links -->
                     <h6 class="text-uppercase fw-bold mb-4">
                         Links
                     </h6>
                     <p>
-                        <a href="#!" class="text-reset">Pricing</a>
+                        <a asp-controller="Home" asp-action="Index" class="text-reset">Página Inicial</a>
                     </p>
                     <p>
-                        <a href="#!" class="text-reset">Settings</a>
+                        <a asp-controller="Product" asp-action="Index" class="text-reset">Produtos</a>
                     </p>
                     <p>
-                        <a href="#!" class="text-reset">Orders</a>
+                        <a asp-controller="Service" asp-action="Index" class="text-reset">Serviços</a>
                     </p>
                     <p>
-                        <a href="#!" class="text-reset">Help</a>
+                        <a asp-controller="Schedule" asp-action="Index" class="text-reset">
+                            @(!User.IsInRole(ERole.Admin.ToString())
+                                ? "Meus Pets"
+                                : "Pets")
+                        </a>
                     </p>
                 </div>
-                <!-- Grid column -->
-
-                <!-- Grid column -->
                 <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
-                    <!-- Links -->
                     <h6 class="text-uppercase fw-bold mb-4">Contato</h6>
                     <p><i class="fas fa-home me-3"></i>Av. Senador Feijó, Santos, SP</p>
                     <p>
@@ -136,19 +118,8 @@
                     </p>
                     <p><i class="fas fa-phone me-3"></i>+55 (13) 99999-9999</p>
                 </div>
-                <!-- Grid column -->
             </div>
-            <!-- Grid row -->
         </div>
     </section>
-    <!-- Section: Links  -->
-
-    @* <!-- Copyright --> *@
-    @* <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);"> *@
-    @*     © 2021 Copyright: Pet World *@
-    @* </div> *@
-    @* <!-- Copyright --> *@
 </footer>
-<!-- Footer -->
-
 </html>
