--- a/PetworldOficial.Presentation/PetworldOficial.MVC/Views/User/MyAccount.cshtml
+++ b/PetworldOficial.Presentation/PetworldOficial.MVC/Views/User/MyAccount.cshtml
@@ -60,23 +60,23 @@
                     <div class="tab-pane fade show active" id="personal" role="tabpanel" aria-labelledby="personal-tab">
                         <div class="row g-3">
                             <div class="col-md-6">
-                                <label asp-for="Name" class="form-label">Nome</label>
+                                <label asp-for="Name" class="form-label">Nome <span style="color: red;">*</span></label>
                                 <input asp-for="Name" type="text" class="form-control">
                             </div>
                             <div class="col-md-6">
-                                <label asp-for="Email" class="form-label">E-mail</label>
+                                <label asp-for="Email" class="form-label">E-mail <span style="color: red;">*</span></label>
                                 <input asp-for="Email" type="email" class="form-control">
                             </div>
                             <div class="col-md-6">
-                                <label asp-for="Document" class="form-label">CPF</label>
+                                <label asp-for="Document" class="form-label">CPF <span style="color: red;">*</span></label>
                                 <input asp-for="Document" type="text" class="form-control">
                             </div>
                             <div class="col-md-6">
-                                <label asp-for="PhoneNumber" class="form-label">Telefone</label>
+                                <label asp-for="PhoneNumber" class="form-label">Telefone <span style="color: red;">*</span></label>
                                 <input asp-for="PhoneNumber" type="tel" class="form-control">
                             </div>
                             <div class="col-md-6">
-                                <label asp-for="@Model.Gender" class="form-label">Gênero</label>
+                                <label asp-for="@Model.Gender" class="form-label">Gênero <span style="color: red;">*</span></label>
                                 <select asp-for="@Model.Gender" class="form-select">
                                     <option value="" disabled>Selecione</option>
                                     @foreach (EGender gender in Enum.GetValues(typeof(EGender)))
@@ -86,7 +86,7 @@
                                 </select>
                             </div>
                             <div class="col-md-6">
-                                <label asp-for="BirthDate" class="form-label">Data de Nascimento</label>
+                                <label asp-for="BirthDate" class="form-label">Data de Nascimento <span style="color: red;">*</span></label>
                                 <input asp-for="BirthDate" type="date" class="form-control">
                             </div>
                         </div>
@@ -96,11 +96,11 @@
                     <div class="tab-pane fade" id="address" role="tabpanel" aria-labelledby="address-tab">
                         <div class="row g-3">
                             <div class="col-md-6">
-                                <label asp-for="Street" class="form-label">Rua</label>
+                                <label asp-for="Street" class="form-label">Rua <span style="color: red;">*</span></label>
                                 <input asp-for="Street" type="text" class="form-control">
                             </div>
                             <div class="col-md-3">
-                                <label asp-for="Number" class="form-label">Número</label>
+                                <label asp-for="Number" class="form-label">Número <span style="color: red;">*</span></label>
                                 <input asp-for="Number" type="number" min="1" class="form-control">
                             </div>
                             <div class="col-md-3">
@@ -108,11 +108,11 @@
                                 <input asp-for="Complement" type="text" class="form-control">
                             </div>
                             <div class="col-md-6">
-                                <label asp-for="Neighborhood" class="form-label">Bairro</label>
+                                <label asp-for="Neighborhood" class="form-label">Bairro <span style="color: red;">*</span></label>
                                 <input asp-for="Neighborhood" type="text" class="form-control">
                             </div>
                             <div class="col-md-6">
-                                <label asp-for="City" class="form-label">Cidade</label>
+                                <label asp-for="City" class="form-label">Cidade <span style="color: red;">*</span></label>
                                 <input asp-for="City" type="text" class="form-control">
                             </div>
                             <div class="col-md-6">
@@ -151,7 +151,7 @@
                                 <br>
                             </div>
                             <div class="col-md-6">
-                                <label asp-for="PostalCode" class="form-label">CEP</label>
+                                <label asp-for="PostalCode" class="form-label">CEP <span style="color: red;">*</span></label>
                                 <input asp-for="PostalCode" type="text" class="form-control">
                             </div>
                         </div>
@@ -161,12 +161,12 @@
                     <div class="tab-pane fade" id="security" role="tabpanel" aria-labelledby="security-tab">
                         <div class="row g-3">
                             <div class="col-md-6">
-                                <label asp-for="Password" class="form-label">Senha Atual</label>
+                                <label asp-for="Password" class="form-label">Senha Atual <span style="color: red;">*</span></label>
                                 <input asp-for="Password" type="password" class="form-control">
                                 <span asp-validation-for="Password"></span>
                             </div>
                             <div class="col-md-6">
-                                <label asp-for="NewPassword" class="form-label">Nova Senha</label>
+                                <label asp-for="NewPassword" class="form-label">Nova Senha <span style="color: red;">*</span></label>
                                 <input asp-for="NewPassword" type="password" class="form-control">
                                 <span asp-validation-for="NewPassword"></span>
                             </div>
